--- a/Assignment1.html
+++ b/Assignment1.html
@@ -75,6 +75,8 @@
 
       document.getElementById('result').innerHTML = `Result: ${result.toFixed(2)}`;
     }
+  <p>  
+  <a href="index.html">Back to Home Page</a>
   </script>
 </body>
 </html>
