--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <style>
         body {
             font-family: "Montserrat", sans-serif;
-            background-color: #f0f0f0; /* Light Gray */
-            color: #4682b4; /* Steel Blue */
+            background-color: #f0f0f0;
+            color: #4682b4;
             text-align: center;
             margin: 20px;
         }
 
         h1 {
-            color:  #4682b4; /* Steel Blue */
+            color:  #4682b4;
             font-size: 100px;
             font-weight: bold;
         }
@@ -24,7 +24,7 @@
         nav {
             display: flex;
             justify-content: center;
-            background-color: #87ceeb; /* Sky Blue */
+            background-color: #87ceeb;
             padding: 10px;
             margin-bottom: 20px;
             font-size: 20px;
@@ -32,7 +32,7 @@
         }
 
         nav a {
-            color: #4682b4; /* Steel Blue */
+            color: #4682b4;
             text-decoration: none;
             padding: 10px 20px;
             margin: 0 10px;
@@ -41,8 +41,8 @@
         }
 
         nav a:hover {
-            background-color: #6D649C; /* CadetBlue */
-            color: #ffffff; /* White */
+            background-color: #6D649C;
+            color: #ffffff;
         }
 
         .dropdown {
@@ -52,7 +52,7 @@
         .dropdown-content {
             display: none;
             position: absolute;
-            background-color: #87ceeb; /* Sky Blue */
+            background-color: #87ceeb;
             min-width: 160px;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             z-index: 1;
@@ -63,7 +63,7 @@
         }
 
         .dropdown-content a {
-            color: #4682b4; /* Steel Blue */
+            color: #4682b4;
             padding: 12px 16px;
             display: block;
             text-decoration: none;
@@ -71,8 +71,8 @@
         }
 
         .dropdown-content a:hover {
-            background-color: #6D649C; /* CadetBlue */
-            color: #ffffff; /* White */
+            background-color: #6D649C;
+            color: #ffffff;
         }
     </style>
 </head>
